2006-09-17  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Forest.cpp, Mercator/Forest.h, Mercator/Plant.h,
	  Mercator/Segment.cpp, Mercator/Segment.h, Mercator/Shader.h,
	  Mercator/Terrain.cpp, Mercator/Terrain.h, Mercator/TerrainMod.h:
	  Add doxygen comments documenting all members that area currently
	  reported as undocumented.

2006-09-17  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/TerrainMod.h: Add some API documentation to the naughty
	  undocumented classes.

2006-08-11  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Forest.cpp: Ensure any subsequent species candidates
	  are skipped once the species for a given node has been instanced.

	* tests/testForest.cpp: Test the plant counts increase in the
	  expected proportions as species are added.

2006-08-11  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Forest.cpp, Mercator/Forest.h: Shuffle the namespacing
	  around a little to make code less verbose and clearer.

	* tests/testForest.cpp: Add tests to cover the new species code.

2006-08-10  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Forest.cpp, Mercator/Forest.h, Mercator/Plant.h:
	  First pass at re-implementing the forest code as a flexible
	  general case, rather than a quick hack.

2006-08-22  Al Riddoch  <alriddoch@zepler.org>

	* configure.ac: Increment version number.

	* NEWS: Update news.

	* Release 0.2.5

2006-01-03  Al Riddoch  <alriddoch@zepler.org>

	* configure.ac, Mercator/iround.h, Mercator/GrassShader.cpp,
	  Mercator/Segment.cpp: Add macro for absolute value of floating
	  point numbers. Check for fabsf() and fall back to fabs() on non
	  C99 systems.

2005-12-02  James Turner  <james@worldforge.org>

	* Add X-Code 2.0 project file (ProjectBuilder project will be deleted
	  shortly).

2005-07-13  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/BasePoint.h: Re-order "const static" to "static const"
	  to eliminate some warnings.

2005-06-16  Al Riddoch  <alriddoch@zepler.org>

	* configure.ac: Increment version number.
