@@ -39,6 +39,14 @@
 
 namespace Mercator {
 
+/// \brief Shader for adding grass to the terrain.
+///
+/// This shader is used to add grassy vegetation to some terrain.
+/// The mask generated by this shader depends on two factors. The altitude
+/// of the terrain, and its slope. Two parameter specify the low and high
+/// altitude values between which vegetation grows. The low value will
+/// typically be just above sea level, and the high value could be anything
+/// up to the height above which plants cannot grow.
 class GrassShader : public Shader {
   private:
     float m_lowThreshold;
