@@ -11,6 +11,13 @@
 
 namespace Mercator {
 
+/// \brief Shader agregating surface data.
+///
+/// Some applications require the terrain surface data be stored in a
+/// single buffer so specific locations can be queried to determine the type.
+/// Typically this is used on a server, where lots of surface data optimised
+/// for rendering is not required, but fast cheap queries about the surface
+/// at a specific point are required.
 class TileShader : public Shader {
   public:
     /// \brief STL map to store sparse array of Shader pointers.
